--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ src="https://www.facebook.com/tr?id=1400667957768581&ev=PageView&noscript=1"
     <header class="site-header">
         <div class="container">
             <div class="site-logo">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/67d37b8fe92b5_Monlogo.jpg" alt="Logo [Votre Nom d'Entreprise]">
+                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/67d37b8fe92b5_Monlogo.jpg" alt="Logo Cap Vers le Canada">
             </div>
         </div>
     </header>
@@ -1140,7 +1140,7 @@ src="https://www.facebook.com/tr?id=1400667957768581&ev=PageView&noscript=1"
                  <p class="cta-subtext" data-aos="fade-up" data-aos-delay="500">Investissez dans la clarté, pas dans l'incertitude.</p>
             </div>
             <div class="hero-image" data-aos="fade-left">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/680426f7f0de9_1001945224.png" alt="Mockup du Guide Immigration Canada Étape par Étape" class="guide-mockup">
+                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6806771249a97_1001951502.png" alt="Mockup du Guide Immigration Canada Étape par Étape" class="guide-mockup">
             </div>
         </div>
     </header>
@@ -1398,7 +1398,7 @@ src="https://www.facebook.com/tr?id=1400667957768581&ev=PageView&noscript=1"
                          <li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-check-circle"></i> Modèles Optimisés de CV et Lettre de Motivation.</li>
                       </ul>
 
-                     <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/680426f7f0de9_1001945224.png" alt="Mockup Guide PDF" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
+                     <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6806771249a97_1001951502.png" alt="Mockup Guide PDF" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
 
                       <div class="device-compatibility" data-aos="fade-up" data-aos-delay="600">
                          <p>Consultez votre guide quand vous voulez, où vous voulez :</p>
