--- a/index.html
+++ b/index.html
@@ -1057,8 +1057,14 @@ src="https://www.facebook.com/tr?id=572408978658915&ev=PageView&noscript=1"
         <div class="container">
             <div class="hero-content" data-aos="fade-right">
                 <h1>Guide Ultime Immigration Canada:<br>Votre Chemin Clair et Fiable Loin des Arnaques.</h1>
-                <pclass="subtitle">Rêvez grand du Canada ?<br>Stoppez la peur des arnaques. Accédez à la <strong>SEULE</strong> feuille de route fiable, <strong>basée sur les sources officielles</strong>, pour <strong>maîtriser votre projet de A à Z</strong>.</p>
-                   <pclass="subtitle"><p>Assez de l'information contradictoire, des "experts" douteux et du stress constant de tomber sur une arnaque qui pourrait ruiner vos années d'économies et vos espoirs. Ce guide n'est pas une simple lecture ; c'est votre <strong>plan d'action concret</strong>, une boussole fiable pour naviguer le processus complexe. Il condense et structure <strong>UNIQUEMENT</strong> les informations directement issues des instances gouvernementales canadiennes. Réussissez non seulement vos démarches avant le départ, mais préparez aussi votre installation pour une intégration réussie.</p>
+                <p>Rêvez grand du Canada ? <strong>Stoppez la peur des arnaques.</strong></p>
+
+<p>Accédez <strong>immédiatement</strong> à la <strong>SEULE</strong> feuille de route fiable, <strong>basée sur les sources officielles</strong>, pour <strong>maîtriser votre projet de A à Z</strong>.</p>
+
+<p>Assez de l'information contradictoire, des "experts" douteux et du stress de l'arnaque. Le Guide Ultime n'est pas une simple lecture ; c'est votre <strong>plan d'action concret</strong>, une boussole fiable pour naviguer le processus complexe. Disponible en <strong>format numérique (PDF téléchargeable)</strong>, il condense et structure <strong>UNIQUEMENT</strong> les informations directement issues des instances gouvernementales canadiennes.</p>
+
+<p>Réussissez vos démarches avant le départ ET préparez sereinement votre installation pour une intégration réussie.</p>
+
                 <a href="#pricing" class="cta-button main-cta" data-aos="fade-up" data-aos-delay="400">
                     Oui, je Veux le Guide Ultime et Maîtriser Mon Projet !
                 </a>
@@ -1071,7 +1077,7 @@ data-aos-delay="500">C'est le moment d'investir dans la
 <strong>certitude</strong> et la <strong>sécurité</strong> de l'information. Pas dans le doute.</p>
             </div>
             <div class="hero-image" data-aos="fade-left">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6806771249a97_1001951502.png" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
+                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6818eb95be61a_1001999968.webp" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
             </div>
         </div>
     </header>
@@ -1395,7 +1401,7 @@ data-aos-delay="200">Face au chaos de la désinformation, il vous faut un <stron
                         <li><i class="fas fa-check-circle"></i> <strong>Modèles</strong> CV + Lettre de Motivation</li>
                         <li><i class="fas fa-check-circle"></i> La <strong>Tranquillité d'Esprit</strong> Ultime</li>
                     </ul>
-                    <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6806771249a97_1001951502.png" alt="Mockup Guide Ultime PDF sur appareils" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
+                    <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6818eb95be61a_1001999968.webp" alt="Mockup Guide Ultime PDF sur appareils" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
                     <div class="device-compatibility" data-aos="fade-up" data-aos-delay="600">
                         <p>Accédez à vos guides où vous voulez, quand vous voulez :</p>
                         <div class="device-icons">
