--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ data-aos-delay="500">C'est le moment d'investir dans la
 <strong>certitude</strong> et la <strong>sécurité</strong> de l'information. Pas dans le doute.</p>
             </div>
             <div class="hero-image" data-aos="fade-left">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68111632e61ca_1001977263.webp" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
+                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6806771249a97_1001951502.png" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
             </div>
         </div>
     </header>
