--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,57 @@ src="https://www.facebook.com/tr?id=572408978658915&ev=PageView&noscript=1"
             footer .footer-links a {margin: 0 5px;}
             footer .contact-info {font-size: 12px;}
         }
+        /* Styles pour la Section Contact Email */
+.email-contact-section {
+    padding: 40px 20px; /* Espacement intérieur (haut/bas et côtés) */
+    background-color: #f8f8f8; /* Couleur de fond légère pour la distinguer */
+    text-align: center; /* Centrer le contenu texte */
+    margin-top: 30px; /* Espacement au-dessus de la section */
+    margin-bottom: 30px; /* Espacement en-dessous de la section */
+}
+
+.email-contact-section h2 {
+    color: #0047AB; /* Couleur bleue pour le titre (exemple, adaptez à votre charte) */
+    margin-bottom: 20px; /* Espacement sous le titre */
+}
+
+.email-contact-section p {
+    color: #333; /* Couleur de texte générale foncée */
+    line-height: 1.6; /* Espacement des lignes pour une meilleure lisibilité */
+    margin-bottom: 15px; /* Espacement sous les paragraphes */
+}
+
+.email-contact-section .contact-info {
+    margin-top: 20px; /* Espacement au-dessus du bloc email */
+    margin-bottom: 20px; /* Espacement en-dessous du bloc email */
+}
+
+.email-contact-section .email-address a {
+    color: #0047AB; /* Couleur du lien email (adaptez) */
+    text-decoration: underline; /* Souligner le lien email */
+    font-size: 1.2em; /* Taille de police légèrement plus grande pour l'email */
+}
+
+.email-contact-section .email-address a:hover {
+    text-decoration: none; /* Enlever le soulignement au survol (optionnel) */
+    opacity: 0.8; /* Réduire l'opacité au survol (optionnel) */
+}
+
+/* Styles pour les petits écrans (mobiles) */
+@media (max-width: 768px) {
+    .email-contact-section {
+        padding: 25px 15px; /* Réduire l'espacement intérieur sur mobile */
+    }
+
+    .email-contact-section h2 {
+        font-size: 1.5em; /* Ajuster la taille du titre sur mobile */
+    }
+
+    .email-contact-section p {
+        font-size: 0.95em; /* Ajuster la taille du texte sur mobile */
+    }
+}
+
 
     </style>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NZDBJMMCWT"></script> <script>
@@ -1459,7 +1510,30 @@ data-aos-delay="200">Face au chaos de la désinformation, il vous faut un <stron
   Le <strong>seul risque</strong> est de passer à côté de l'information qui peut changer votre avenir.
 </p>
          </div>
-    </section>
+     </section>
+<section class="email-contact-section" id="email-contact-section">
+    <div class="container" data-aos="fade-up">
+        <h2>Une Question sur le Guide ? Contactez-nous !</h2>
+        <p>
+            Vous avez lu la page, découvert le plan... mais une question spécifique sur le <strong>contenu</strong> du Guide Ultime subsiste avant de vous décider ? Pas de souci ! 
+            Notre équipe est là pour vous répondre par email. 
+            <br>
+            <strong>Attention importante :</strong> Nous ne pouvons PAS fournir de conseil personnalisé sur votre dossier d'immigration (calcul de points, éligibilité spécifique à un programme, examen de votre profil, etc.). 
+            Nous sommes ravis d’éclaircir tout point relatif aux informations et modules contenus <strong>dans le guide</strong>.
+        </p>
+
+        <div class="contact-info">
+            <p>Envoyez-nous un email à :</p>
+            <p class="email-address">
+                <strong><a href="mailto:capsverslecanada@gmail.com">capsverslecanada@gmail.com</a></strong>
+            </p>
+        </div>
+        
+        <p>Nous nous efforçons de répondre dans les plus brefs délais.</p>
+
+    </div>
+</section>
+
     <footer>
         <div class="container">
             <p>&copy; <span id="current-year"></span> Cap Vers le Canada. Tous droits réservés.</p>
