--- a/index.html
+++ b/index.html
@@ -1107,15 +1107,9 @@ src="https://www.facebook.com/tr?id=572408978658915&ev=PageView&noscript=1"
     <header class="hero-section">
         <div class="container">
             <div class="hero-content" data-aos="fade-right">
-                <h1>Guide Ultime Immigration Canada:<br>Votre Chemin Clair et Fiable Loin des Arnaques.</h1>
-                <p>Rêvez grand du Canada ? <strong>Stoppez la peur des arnaques.</strong></p>
-
-<p>Accédez <strong>immédiatement</strong> à la <strong>SEULE</strong> feuille de route fiable, <strong>basée sur les sources officielles</strong>, pour <strong>maîtriser votre projet de A à Z</strong>.</p>
-
-<p>Assez de l'information contradictoire, des "experts" douteux et du stress de l'arnaque. Le Guide Ultime n'est pas une simple lecture ; c'est votre <strong>plan d'action concret</strong>, une boussole fiable pour naviguer le processus complexe. Disponible en <strong>format numérique (PDF téléchargeable)</strong>, il condense et structure <strong>UNIQUEMENT</strong> les informations directement issues des instances gouvernementales canadiennes.</p>
-
-<p>Réussissez vos démarches avant le départ ET préparez sereinement votre installation pour une intégration réussie.</p>
-
+  <h1>Stop Arnaques Immigration Canada: Votre Seule Source Fiable pour Réussir.</h1> <p>Marre des "experts" improvisés et de la peur constante de tomber dans un piège en voulant immigrer au Canada ? <strong>Il est temps de reprendre le contrôle.</strong></p>
+<p>Ne perdez plus votre temps ni votre argent. Obtenez la <strong>SEULE feuille de route d'immigration canadienne à laquelle vous pouvez faire CONFIANCE</strong>. Uniquement basée sur les <strong>informations officielles et vérifiées</strong>, elle vous guide pas à pas pour <strong>transformer votre rêve canadien en réalité, sans stress ni mauvaise surprise</strong>.</p>
+<p>Le Guide Ultime n'est pas une théorie de plus, c'est votre <strong>plan d'action anti-arnaque</strong>. En <strong>format numérique (PDF)</strong>, il compile de manière claire et structurée <strong>UNIQUEMENT les faits et procédures issus des autorités canadiennes compétentes</strong>. Sécurisez vos démarches avant même de partir et préparer le terrain pour une installation et une intégration réussies au Canada.</p>
                 <a href="#pricing" class="cta-button main-cta" data-aos="fade-up" data-aos-delay="400">
                     Oui, je Veux le Guide Ultime et Maîtriser Mon Projet !
                 </a>
