--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@ body {
         <div class="contact-info">
             <p>Envoyez-nous un email à :</p>
             <p class="email-address">
-                <strong><a href="mailto:capsverslecanada@gmail.com">contact@capverslecanada.com</a></strong>
+                <strong><a href="mailto:contact@capverslecanada.com">contact@capverslecanada.com</a></strong>
             </p>
                     <p>Nous nous efforçons de répondre dans les plus brefs délais.</p>
         </div>
