--- a/index.html
+++ b/index.html
@@ -1365,10 +1365,7 @@ body {
         </div>
 
     </div>
-</section>
-     <div class="hero-image" data-aos="fade-left">
-                    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d2a6c28477_1002012451.webp" alt="..."></div>
-            </div>
+</sectiion>
 <section class="content-section" id="content-section">
     <div class="container">
             <h2 data-aos="fade-up">Découvrez les 10 Modules Essentiels du Guide Ultime :</h2>
