--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
     </div>
 </header>
 
-    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d3a1bd33d5_1002012666.webp" alt="..."></div>
+    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832281339337_1002058308.png" alt="..."></div>
 <section class="problem-section" id="problem-section">
     <div class="container">
         <i class="fas fa-exclamation-triangle icon-section" data-aos="fade-up"></i>
@@ -1361,7 +1361,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
 </section>
 
      <div class="hero-image" data-aos="fade-left">
-                    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/682296a233640_1002022602.png" alt="..."></div>
+                    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68322831ed614_1002061829.png" alt="..."></div>
             </div>
 <section class="solution-section" id="solution-section">
     <div class="container">
@@ -1454,7 +1454,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 précieuse expérience acquise dans votre pays.</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d30e02f039_1002012434.webp" alt="[attachment_0](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832287f2882e_1002062311.png" alt="[attachment_0](attachment)">
             </div>
             <li>
                 <strong>Module 5 : Comprendre le marché de l'emploi au Canada et adapter vos outils (CV, lettre)
@@ -1465,7 +1465,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 place.</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d30e9e3df7_1002012447.webp" alt="[attachment_1](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832289c187b1_1002062334.png" alt="[attachment_1](attachment)">
             </div>
             <li>
                 <strong>Module 6 : Gérer vos finances et prouver vos fonds (explications adaptées à la réalité
@@ -1499,7 +1499,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 secrets d'une intégration réussie pour vous sentir rapidement "chez vous".</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d30d2841fb_1002012435.webp" alt="[attachment_2](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/683228b65b59b_1002062368.png" alt="[attachment_2](attachment)">
             </div>
         </ul>
         <div class="text-center" data-aos="fade-up" data-aos-delay="300" style="margin-top: 50px;">
@@ -1510,7 +1510,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
     </div>
 </section>
 
-    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/681d30c35364e_1002012448.webp" alt="..."></div>
+    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/683228dd198cd_1002062488.png" alt="..."></div>
 
     <section class="mamadou-story-section" id="mamadou-story-section"> <div class="container">
             <i class="fas fa-user-times icon-section" data-aos="fade-up"></i>
@@ -1753,9 +1753,9 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
   Votre Accès Immédiat à <strong>TOUT le Pack Ultime</strong> pour Maîtriser Votre Projet :
 </h3>
                         <p class="original-price">Valeur réelle : <span class="strike-through">14500 F CFA</span></p>
-                        <p class="promo-price">Seulement <span>4900 F CFA</span></p>
-                        <p class="saving"><i class="fas fa-check"></i> <strong>Économisez 9600 F CFA</strong> aujourd'hui !</p>
-                        <a href="https://uowkorva.mychariow.com/prd_xni6no/checkout" class="cta-button main-cta"> Je Télécharge Mon Pack Ultime Maintenant !
+                        <p class="promo-price">Seulement <span>5000 F CFA</span></p>
+                        <p class="saving"><i class="fas fa-check"></i> <strong>Économisez 9500 F CFA</strong> aujourd'hui !</p>
+                        <a href="https://uowkorva.mychariow.com/prd_xni6no/checkout" class="cta-button main-cta"> Je Télécharge Mon Pack Complet Maintenant !
                         </a>
        <p style="font-size: 18px; color: #28a745; font-weight: 700; margin-top: 20px;">
     <i class="fas fa-shield-alt"></i> Votre achat est couvert par notre Garantie Satisfaction 30 Jours. <a href="#guarantee-section" style="color: #28a745; text-decoration: underline;">Voir les détails.</a>
