--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@ section h2::after {
     <header class="site-header">
         <div class="container">
             <div class="site-logo">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/682e77c05494c_1002055607.png" alt="Logo Cap Vers le Canada">
+                <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324adf2bedc_1002067342.webp" alt="Logo Cap Vers le Canada">
             </div>
         </div>
     </header>
@@ -1342,12 +1342,12 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
 <p class="cta-subtext" data-aos="fade-up" data-aos-delay="500">Cliquez pour obtenir les <strong>informations basées sur les sources officielles du Canada</strong> et avancer l'<strong>esprit serein</strong>.</p>
         </div>
         <div class="hero-image" data-aos="fade-left">
-            <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/682e85bd21f37_1002057436.png" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
+            <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324aa292e91_1002067348.webp" alt="Mockup du Guide Ultime Immigration Canada 2025" class="guide-mockup">
         </div>
     </div>
 </header>
 
-    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832281339337_1002058308.png" alt="..."></div>
+    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324ab203164_1002067347.webp" alt="..."></div>
 <section class="problem-section" id="problem-section">
     <div class="container">
         <i class="fas fa-exclamation-triangle icon-section" data-aos="fade-up"></i>
@@ -1454,7 +1454,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 précieuse expérience acquise dans votre pays.</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832287f2882e_1002062311.png" alt="[attachment_0](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324abceb830_1002067345.webp" alt="[attachment_0](attachment)">
             </div>
             <li>
                 <strong>Module 5 : Comprendre le marché de l'emploi au Canada et adapter vos outils (CV, lettre)
@@ -1465,7 +1465,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 place.</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/6832289c187b1_1002062334.png" alt="[attachment_1](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324ac94138d_1002067344.webp" alt="[attachment_1](attachment)">
             </div>
             <li>
                 <strong>Module 6 : Gérer vos finances et prouver vos fonds (explications adaptées à la réalité
@@ -1499,7 +1499,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 secrets d'une intégration réussie pour vous sentir rapidement "chez vous".</span>
             </li>
             <div class="image-section-transition"><img
-                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/683228b65b59b_1002062368.png" alt="[attachment_2](attachment)">
+                src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324aec9a248_1002067341.webp" alt="[attachment_2](attachment)">
             </div>
         </ul>
         <div class="text-center" data-aos="fade-up" data-aos-delay="300" style="margin-top: 50px;">
@@ -1510,7 +1510,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
     </div>
 </section>
 
-    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/683228dd198cd_1002062488.png" alt="..."></div>
+    <div class="image-section-transition"><img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324df44da9c_1002067411.webp" alt="..."></div>
 
     <section class="mamadou-story-section" id="mamadou-story-section"> <div class="container">
             <i class="fas fa-user-times icon-section" data-aos="fade-up"></i>
@@ -1739,7 +1739,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                         <li><i class="fas fa-check-circle"></i> <strong>Modèles</strong> CV + Lettre de Motivation</li>
                         <li><i class="fas fa-check-circle"></i> Pour avancer avec <strong>plus de tranquillité d'esprit</strong></li>
                     </ul>
-                    <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/682e85bd21f37_1002057436.png" alt="Mockup Guide Ultime PDF sur appareils" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
+                    <img src="https://d1yei2z3i6k35z.cloudfront.net/11365804/68324aa292e91_1002067348.webp" alt="Mockup Guide Ultime PDF sur appareils" class="pricing-mockup-img" data-aos="fade-up" data-aos-delay="500">
                     <div class="device-compatibility" data-aos="fade-up" data-aos-delay="600">
                         <p>Accédez à vos guides où vous voulez, quand vous voulez :</p>
                         <div class="device-icons">
@@ -1750,7 +1750,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
                 <div class="pricing-box-wrapper" data-aos="fade-up" data-aos-delay="100">
                     <div class="price-box">
 <h3 class="pricing-info-title">
-  Votre Accès Immédiat à <strong>TOUT le Pack Ultime</strong> pour Maîtriser Votre Projet :
+  Votre Accès Immédiat à <strong>TOUT le Pack Complet</strong> pour Maîtriser Votre Projet :
 </h3>
                         <p class="original-price">Valeur réelle : <span class="strike-through">14500 F CFA</span></p>
                         <p class="promo-price">Seulement <span>5000 F CFA</span></p>
