--- a/index.html
+++ b/index.html
@@ -1790,7 +1790,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
             dans les modules, découvrez la structure et la présentation des informations.
             Si, pour quelque raison que ce soit, vous estimez que le guide ne répond pas à vos attentes en termes de
             <strong>qualité du contenu, de clarté de l'information ou de sa conformité aux sources officielles</strong>, contactez-nous à
-            <strong><a href="mailto:contact@immilegalglobal.com">contact@immilegalglobal.com</a></strong>.
+            <strong><a href="mailto:immilegalglobal@gmail.com">immilegalglobal@gmail.com</a></strong>.
         </p>
         <p class="guarantee-text">
             Nous vous <strong>rembourserons intégralement</strong>, sans poser de questions. Votre
@@ -1819,7 +1819,7 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
             <p>Envoyez-nous un email à :</p>
             <p class="email-address">
                 <strong><a
-                    href="mailto:contact@immilegalglobal.com">contact@immilegalglobal.com</a></strong>
+                    href="mailto:immilegalglobal@gmail.com">immilegalglobal@gmail.com</a></strong>
             </p>
             <p>Nous nous efforçons de répondre dans les plus brefs délais.</p>
         </div>
@@ -1846,11 +1846,11 @@ Accéder au Guide Complet et Planifier Mon Projet en Toute Confiance !
         </div>
         <p>&copy; <span id="current-year"></span> ImmiLégal Global. Tous droits réservés.</p>
         <div class="footer-links">
-            <a href="#">Conditions Générales de Vente</a> |
-            <a href="#">Politique de Confidentialité</a> |
-            <a href="#">Mentions Légales</a>
+            <a href="https://conditions-g-n-rales-de-vente-cgv.onrender.com">Conditions Générales de Vente</a> |
+            <a href="https://politique-de-confidentialit.onrender.com">Politique de Confidentialité</a> |
+            <a href="https://mention-l-gale.onrender.com">Mentions Légales</a>
         </div>
-        <p class="contact-info">Support Client : <strong>contact@immilegalglobal.com</strong></p>
+        <p class="contact-info">Support Client : <strong>immilegalglobal@gmail.com</strong></p>
     </div>
 </footer>
 
